--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
- spring.datasource.url=jdbc:mariadb://localhost:3306/monitor-links?createDatabaseIfNotExist=true&serverTimezone=America/Bogota
+spring.datasource.url=jdbc:mariadb://localhost:3306/monitor-links?createDatabaseIfNotExist=true&serverTimezone=America/Bogota
+#spring.datasource.url=jdbc:mariadb://localhost:3306/monitor-links?createDatabaseIfNotExist=true&serverTimezone=America/Bogota
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.show-sql=true
@@ -7,7 +8,8 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB10Dialect
 logging.level.org.hibernate.SQLQuery=debug
-server.port=8888
+#server.port=8888
+server-port={PORT:8080}
 
 
 spring.thymeleaf.cache=false
