--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/monitor-links?createDatabaseIfNotExist=true&serverTimezone=America/Bogota
+spring.datasource.url=jdbc:mariadb://s465z7sj4pwhp7fn.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/nzfibh06j4ili64v?useSSL=false
 #spring.datasource.url=jdbc:mariadb://localhost:3306/monitor-links?createDatabaseIfNotExist=true&serverTimezone=America/Bogota
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username=xk4ldafzalnqys8v
+spring.datasource.password=d0tstji59ivozscn
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.properties.hibernate.jdbc.time_zone = UTC
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB10Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 logging.level.org.hibernate.SQLQuery=debug
 #server.port=8888
-server-port={PORT:8080}
+server.port=${PORT:8080}
 
 
 spring.thymeleaf.cache=false
