--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,13 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/monitor-links?createDatabaseIfNotExist=true&serverTimezone=America/Bogota
-#spring.datasource.url=jdbc:mariadb://localhost:3306/monitor-links?createDatabaseIfNotExist=true&serverTimezone=America/Bogota
+ spring.datasource.url=jdbc:mariadb://localhost:3306/monitor-links?createDatabaseIfNotExist=true&serverTimezone=America/Bogota
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.properties.hibernate.jdbc.time_zone = UTC
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB10Dialect
 logging.level.org.hibernate.SQLQuery=debug
-#server.port=8888
-server-port={PORT:8080}
+server.port=8888
 
 
 spring.thymeleaf.cache=false
