--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
- spring.datasource.url=s465z7sj4pwhp7fn.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/xzl6ov7t983rdu55?use_SSL=false
-spring.datasource.username=yld9z1m7hlx4flvg
-spring.datasource.password=mnifcsy38trmqgm8
+
+spring.datasource.url=jdbc:mysql://185.201.11.86:3306/u476163449_ads?use_SSL=false
+spring.datasource.username=u476163449_adsfb
+spring.datasource.password=Alissa1995*
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.jdbc.time_zone = UTC
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB10Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 logging.level.org.hibernate.SQLQuery=debug
 #server.port=8888
 server.port=${PORT:8080}
