--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,19 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/monitor-links?use_SSL=false
+spring.datasource.username=root
+spring.datasource.password=
 
-spring.datasource.url=jdbc:mysql://185.201.11.86:3306/u476163449_ads?use_SSL=false
-spring.datasource.username=u476163449_adsfb
-spring.datasource.password=Alissa1995*
+
+#spring.datasource.url=jdbc:mysql://185.201.11.86:3306/u476163449_ads?use_SSL=false
+#spring.datasource.username=u476163449_adsfb
+#spring.datasource.password=Alissa1995*
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.properties.hibernate.jdbc.time_zone = UTC
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 logging.level.org.hibernate.SQLQuery=debug
-#server.port=8888
-server.port=${PORT:8080}
+server.port=8888
+#server.port=${PORT:8080}
 
 spring.thymeleaf.cache=false
 
