--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,15 @@
 #spring.datasource.password=
 
 
-spring.datasource.url=jdbc:mysql://185.201.11.86:3306/u476163449_ads?use_SSL=false
+spring.datasource.url=jdbc:mysql://185.201.11.86:3306/u476163449_ads?use_SSL=false&serverTimezone=America/Bogota
 spring.datasource.username=u476163449_adsfb
 spring.datasource.password=Alissa1995*
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.properties.hibernate.jdbc.time_zone = UTC
+spring.jpa.properties.hibernate.jdbc.time_zone = UTC
+spring.jackson.time-zone=America/Bogota
+spring.jackson.locale=es_CO
+
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 logging.level.org.hibernate.SQLQuery=debug
