--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,8 @@ spring.jackson.locale=es_CO
 
 #dialect postgres prod
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.maxActive=100
 logging.level.org.hibernate.SQLQuery=debug
 
 #server.port=8888
