--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,8 +35,8 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.maxActive=100
 logging.level.org.hibernate.SQLQuery=debug
 
-#server.port=8888
-server.port=${PORT:8080}
+server.port=8888
+#server.port=${PORT:8080}
 
 spring.thymeleaf.cache=false
 
