--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 		<dependency>
 			<groupId>com.google.api-client</groupId>
 			<artifactId>google-api-client</artifactId>
-			<version>1.30.9</version>
+			<version>1.32.1</version>
 		</dependency>
 
 
@@ -65,6 +65,11 @@
 			<artifactId>mysql-connector-java</artifactId>
 
 		</dependency>
+		<dependency>
+    <groupId>com.google.cloud</groupId>
+    <artifactId>google-cloud-translate</artifactId>
+    <version>2.1.7</version>
+</dependency>
 
 
 		<dependency>
@@ -100,6 +105,22 @@
 			<artifactId>postgresql</artifactId>
 			
 		</dependency>
+		
+
+
+    <dependency>
+      <groupId>com.google.cloud</groupId>
+      <artifactId>libraries-bom</artifactId>
+      <version>23.1.0</version>
+      <type>pom</type>
+      <scope>import</scope>
+    </dependency>
+
+  <dependency>
+    <groupId>com.google.cloud</groupId>
+    <artifactId>google-cloud-vision</artifactId>
+    <version>2.0.14</version>
+  </dependency>
 
 
 
