--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,12 @@
 
 
 #mysql pruebas
-spring.datasource.url=jdbc:mysql://database-enki.mysql.database.azure.com:3306/enki?use_SSL=false&serverTimezone=America/Bogota
+spring.datasource.url=jdbc:mysql://database-enki.mysql.database.azure.com:3306/enki?use_SSL=false&serverTimezone=America/Bogota&useUnicode=true
 spring.datasource.username=enkicom@database-enki
 spring.datasource.password=T-G8m*A6
+spring.datasource.hikari.connection-init-sql=SET NAMES utf8mb4 COLLATE utf8mb4_unicode_ci
+spring.datasource.tomcat.initSQL=SET NAMES 'utf8mb4'
+
 
 
 #Postgres produccion
