--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.url=jdbc:mysql://database-enki.mysql.database.azure.com:3306/e
 spring.datasource.username=enkicom@database-enki
 spring.datasource.password=T-G8m*A6
 spring.datasource.hikari.connection-init-sql=SET NAMES utf8mb4 COLLATE utf8mb4_unicode_ci
-spring.datasource.tomcat.initSQL=SET NAMES 'utf8mb4'
+#spring.datasource.tomcat.initSQL=SET NAMES 'utf8mb4'
 
 
 
@@ -39,8 +39,8 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.maxActive=100
 logging.level.org.hibernate.SQLQuery=debug
 
-#server.port=8888
-server.port=${PORT:8080}
+server.port=8888
+#server.port=${PORT:8080}
 
 spring.thymeleaf.cache=false
 
