--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,11 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		
-
+<dependency>
+  <groupId>com.google.api-ads</groupId>
+  <artifactId>google-ads</artifactId>
+  <version>16.0.3</version>
+</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
