--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 <dependency>
   <groupId>com.google.api-ads</groupId>
   <artifactId>google-ads</artifactId>
-  <version>16.0.3</version>
+  <version>17.0.1</version>
 </dependency>
 
 		<dependency>
@@ -75,6 +75,13 @@
     <groupId>com.google.cloud</groupId>
     <artifactId>google-cloud-translate</artifactId>
     <version>2.1.7</version>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/org.apache.maven/maven-artifact -->
+<dependency>
+    <groupId>org.apache.maven</groupId>
+    <artifactId>maven-artifact</artifactId>
+    <version>3.8.4</version>
 </dependency>
 
 
@@ -170,6 +177,30 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
+<!-- https://mvnrepository.com/artifact/com.google.api-ads/google-ads -->
+<!-- https://mvnrepository.com/artifact/com.google.api-ads/ads-lib -->
+<dependency>
+    <groupId>com.google.api-ads</groupId>
+    <artifactId>ads-lib</artifactId>
+    <version>4.16.0</version>
+</dependency>
+
+
+
+<dependency>
+    <groupId>com.google.api-ads</groupId>
+    <artifactId>dfp-axis</artifactId>
+    <version>4.16.0</version>
+</dependency>
+
+<dependency>
+  <groupId>com.google.api-ads</groupId>
+  <artifactId>google-ads</artifactId>
+  <version>17.0.1</version>
+</dependency>
+
+
+
 
 
 	</dependencies>
@@ -179,7 +210,12 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				
+				<configuration>
+				</configuration>
 			</plugin>
+			
+		
 		</plugins>
 	</build>
 
