--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,8 +39,8 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.maxActive=100
 logging.level.org.hibernate.SQLQuery=debug
 
-server.port=8080
-#server.port=${PORT:8080}
+#server.port=8080
+server.port=${PORT:8080}
 
 spring.thymeleaf.cache=false
 
