--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,7 @@ spring.datasource.hikari.connection-init-sql=SET NAMES utf8mb4 COLLATE utf8mb4_u
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.jdbc.time_zone = UTC
+spring.jpa.properties.hibernate.jdbc.time_zone = GMT-5
 spring.jackson.time-zone=America/Bogota
 spring.jackson.locale=es_CO
 
