--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,12 @@
 			<version>1.32.1</version>
 		</dependency>
 
+			<dependency>
+		      <groupId>org.springframework.boot</groupId>
+		      <artifactId>spring-boot-devtools</artifactId>
+		      <scope>runtime</scope>
+		      <optional>true</optional>
+		    </dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
